# python-gil-evaluator

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  evaluator.yaml  planner.yaml  reporter.yaml
artifacts/: gil_eval_report.json
configs/: priority_libraries.txt
docs/: IMPLEMENTATION_PLAN.md  PRIORITY_LIBRARY_ROADMAP.md
scripts/: aggregate_reports.py
src/gil_evaluator/: __init__.py  adapters.py  cases.py  cli.py  history.py  models.py  plugins.py  reporting.py  runner.py  runtime_worker.py  scoring.py  subprocess_runner.py
src/gil_evaluator/examples/: __init__.py  plugin_adapter.py
tests/: test_history.py  test_plugins.py  test_profiles.py  test_runner.py  test_scoring.py  test_subprocess_runner.py
