[project]
name = "python-gil-evaluator"
version = "0.1.0"
description = "Framework for evaluating Python library behavior under GIL and free-threaded runtimes"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "python-gil-evaluator contributors" }]
dependencies = []

[project.optional-dependencies]
scientific = ["numpy>=1.26", "pandas>=2.2"]
web = ["httpx>=0.27", "sqlalchemy>=2.0"]
all = [
  "numpy>=1.26",
  "pandas>=2.2",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
gil-eval = "gil_evaluator.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/gil_evaluator"]
